--- a/p1/estilo/estilo.css
+++ b/p1/estilo/estilo.css
@@ -1,3 +1,4 @@
+@import url(formularios.css);
 /* --------------------- Estil comu --------------------- */
 html {
     --glaucous: #7d82b8ff;
@@ -21,6 +22,7 @@ html {
     scroll-behavior: smooth;
     text-decoration: none;
     list-style-type: none;
+    text-align: justify;
 }
 
 body{
