--- a/p1/estilo/formularios.css
+++ b/p1/estilo/formularios.css
@@ -13,21 +13,35 @@ html {
         --violet: rgba(104, 50, 87, 1);
     */
 }
+
 form{
+    width: auto;
     background-color: var(--pink-crayola);
     
-    border-color: var(--violet);
-    border-style: solid;
-    
-    /*quiero centrar esto*/
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2em;
+    margin: 0.5em;
+
 
 }
 label{
-    padding: 0.5em;
 
+    padding: 0.5em;
     margin: 0.5em;
     display: inline-block;
     background-color: var(--melon);
+    text-align: left;
+    transition: .5s;
+}
+label:hover{
+    border-radius: 1em;
+    transition: .5s;
+    color: #FFF;
+
 }
 input{
     width: 100%;
@@ -39,14 +53,55 @@ input{
 
 input:focus{
     border-bottom:2px solid var(--violet)
+    
+}
+
+button{
+    outline:none;
+     padding: 0;
+    /* border: none;
+    background: none;*/
+   
+
+
 }
 .boton{
     border-radius: .5em;
     border-style: solid;
     border-color: aquas;
-    background-color: #565656;
+    padding: 0.5em;
+    background-color: var(--t);
     width: auto;
+    color:#FFF;
+    transition:.5s;
+
+
+   
 }
+.boton:hover{
+    border-radius: .5em;
+    border-style: solid;
+
+    background-color:violet;
+    width: auto;
+    color:#000;
+    transition: .5s;
+}
+
 #img{
     display: none;
+}
+@media screen and (max-width: 480px){
+
+
+}
+
+@media screen and (min-width: 480px) and (max-width: 779px){
+   
+
+}
+
+@media screen and (min-width: 780px) and (max-width: 864px){
+   
+    
 }
