--- a/p1/estilo/formularios.css
+++ b/p1/estilo/formularios.css
@@ -23,38 +23,36 @@ form{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 1em;
-    margin: 0.5em;
-
-
+    border-radius: 10px;
+    margin: .5em;
 }
-form>label{
-
-    padding: 0.5em;
-    margin: 0.5em;
+form > label{
+    padding: .5em;
+    margin: .5em;
     display: inline-block;
     background-color: var(--melon);
     text-align: left;
-    transition: .5s;
+    transition: .3s;
 
 }
-form>label:hover{
-    border-radius: 1em;
-    transition: .5s;
+form > label:hover{
+    border-radius: 10px;
+    transition: .3s;
     color: #FFF;
 
 }
-form>label>input{
+form > label > input{
     width: 100%;
-    box-sizing:border-box;
-    background:none;
-    outline:none;
-    border:0;
-    transition:all .3s;border-bottom:2px solid var(--melon)}
+    box-sizing: border-box;
+    background: none;
+    outline: none;
+    border: 0;
+    transition: all .3s;
+    border-bottom: 2px solid var(--melon);
+}
 
-form>label>input:focus{
-    border-bottom:2px solid var(--violet)
-    
+form > label > input:focus{
+    border-bottom: 2px solid var(--violet);
 }
 
 button{
@@ -62,59 +60,45 @@ button{
      padding: 0;
     /* border: none;
     background: none;*/
-   
-
-
 }
 .boton{
     border-radius: .5em;
-border:0;
+    border:0;
     padding: 0.5em;
     background-color: var(--t);
     width: auto;
     color:#FFF;
-    transition:.5s;
-    margin:0.5em;
-
-
-   
+    transition:.3s;
+    margin:0.5em;   
 }
 .boton:hover{
-
-
-
-    background-color:violet;
+    background-color:var(--violet);
     width: auto;
     color:#000;
-    transition: .5s;
+    transition: .3s;
 }
 
-#img{
-    display: none;
-}
+#img{ display: none; }
+
 @media screen and (max-width: 480px){
+    form > label{
+        width: 15em;
+    }
+}
 
-form>label{
-    width: 15em;
-}
-}
-
-@media screen and (min-width: 480px) and (max-width: 779px){
-   
-form>label{
-    width:45%;
-}
+@media screen and (min-width: 480px) and (max-width: 779px){   
+    form > label{
+        width:45%;
+    }
 }
 
 @media screen and (min-width: 780px) and (max-width: 864px){
-   form>label{
-    width:45%;
-   }
-    
+    form > label{
+        width:45%;
+    }
 }
 @media screen and (min-width: 865px) and (max-width: 1920px){
-    form>label{
-     width:45%;
+    form > label{
+        width:45%;
     }
-     
- }
+}
