--- a/p1/estilo/estilo.css
+++ b/p1/estilo/estilo.css
@@ -71,12 +71,31 @@ footer > p > a{
     color: var(--violet);
 }
 
-/* SECTION */
+/* MAIN - SECTION */
 body > main{ 
     padding: 1em; /* q no estiga tot apegat */
 }
-.carta{ padding: 0;
-} /* cartetes d'index */
+
+body > main > section > div > article{
+    border-radius: 10px;
+    margin: 0.5em;
+    padding: 2em;
+    transition: 0.3s;
+    width:auto;
+}
+
+.carta{ padding: 0; } /* cartetes d'index */
+
+.carta > a > h4 , .carta > p{
+    padding: 1em;
+    margin: 0;
+}
+
+body > main > section > div > article{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+body > main > section > div > article:hover{ box-shadow: 0 0 1.5em 0.15em var(--c5); }
+
 
 /* NO visible menú hamburguesa */
 body > nav > label{ display: none; } /* lleva el &equiv */
