--- a/p1/estilo/navbar.css
+++ b/p1/estilo/navbar.css
@@ -35,9 +35,7 @@ body > nav > ul > li { /* seguir provant fins que quede bñe */
 .act{
     background-color: var(--melon);
     color: var(--melon);
-   padding: 1.12em;
-    
-
+    padding: 1.12em;
 }
 
 .menu > li > a{
@@ -107,7 +105,7 @@ body > header > nav{
 }
 
 @media screen and (min-width: 780px) and (max-width: 864px){
-    
+    .menu > li > a > i{ display: none; }
 }
 
 @media screen and (min-width: 865px) and (max-width: 1920px){
