--- a/p1/estilo/navbar.css
+++ b/p1/estilo/navbar.css
@@ -25,6 +25,7 @@ body > nav > ul{
     padding: 0; /* lleva sangria */
     display: flex;
     justify-content: space-evenly;
+    margin: 0; /* ajusta que estiga apegat */
 }
 
 .act{
@@ -32,73 +33,54 @@ body > nav > ul{
     color: var(--melon);
 }
 
-.menu{ margin: 0; } /* ajusta que estiga apegat */
-.menu > li{ padding: 1em; }
-
+.menu > li{
+    flex: 1; /* que ocupe tot el bloc */
+    padding: 1em;
+}
 .menu > li > a{
     color: #fff;
     text-align: center;
     display: block;
+    letter-spacing: 1px;
 }
 .menu > li > a > i{ padding-right: .5em; }
 
-/* de altra practica
-body > header > nav{
-            position: relative;
-        }
-            body > header > nav > label {
-                font-size: 1.5em;
-                font-weight: bold;
-                color: #fff;
-                display: flex;
-                width: 100%;
-            }
-            body > header > nav > ul{
-                list-style: none;
-                margin: 0;
-                padding: 0;
-                position: absolute;
-                left: -100%;
-                width: 93%;
-                display: flex;
-                flex-wrap: wrap;
-            }
-
-            body > header > nav > ul > li{
-                margin: 0 5px;
-            }
-
-                body > header > nav > ul > li > a{
-                    display: block;
-                    padding: .4em;
-                    color: var(--groc);
-                    font-weight: 500;
-                    padding: 8px 15px;
-                    border-radius: 5px;
-                    letter-spacing: 1px;
-                    transition: all 0.2s ease;
-                }                  
-                    body > header > nav > ul > li > a.act { /*per a la pag en la que estem
-                        background-color: var(--groc);
-                        color: #fff;
-                    }
-                    
-                    body > header > nav > ul > li > a:hover:not(.act) {
-                        background-color: #888;
-                        color: #fff;
-                    }
-                    body > header > nav > ul > li > a:hover{
-                        color: var(--roig);
-                    }
-*/
-
 /* ------------- MEDIA QUERIES ------------- */
 @media screen and (max-width: 480px){
+    nav > label[for="chkMenu"]{ /* &equiv; */
+        font-size: 1.5em;
+        font-weight: bold;
+        color: var(--melon);
+        padding: 0 .5em;
+    }
+    /* .menu{
+        position: absolute;
+        width: 100%;
+        overflow: hidden;
+        flex-direction: column;
+        align-items: center;
+        background-color: var(--violet);
+        height: 0px;
+        transition: height .4s ease;
+    } */
+    /* .menu{
+        position: absolute;
+        width: 100%;
+        background-color: var(--violet);
+        transition: .4s ease;
+    }
+    #chkMenu:checked+.menu{
+        height: auto;
+    } */
     
+    #chkMenu:checked+ul li{
+        padding: .5em;
+    }
+    .menu > li > a{ font-size: small; }
 }
 
 @media screen and (min-width: 480px) and (max-width: 779px){           
-    .menu li { flex: 1; padding: 0.65em;}   
+    .menu li { padding: 0.65em;}   
     .menu > li > a{ font-size: 0; }
     .menu > li > a > i{
         font-size: medium;
