--- a/p1/estilo/formularios.css
+++ b/p1/estilo/formularios.css
@@ -20,22 +20,25 @@ form{
     align-items: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     border-radius: 10px;
-    margin: .5em;
+    padding: 1em;
 }
 form > label{
     padding: .5em;
     margin: .5em;
     display: inline-block;
     background-color: var(--melon);
+    color: var(--violet);
     text-align: left;
 }
 form > label:hover{
     border-radius: 10px;
     transition: .3s;
     color: #FFF;
+}
+form >label~fieldset{
+    color: #fff;
 }
 form > label > input{
     width: 100%;
@@ -46,17 +49,8 @@ form > label > input{
     transition: all .3s;
     border-bottom: 2px solid var(--melon);
 }
+form > label > input:focus{ border-bottom: 2px solid var(--violet); }
 
-form > label > input:focus{
-    border-bottom: 2px solid var(--violet);
-}
-
-button{
-    outline:none;
-     padding: 0;
-    /* border: none;
-    background: none;*/
-}
 .boton{
     border-radius: .5em;
     border:0;
@@ -79,7 +73,6 @@ textarea{
 
 }
 textarea:focus{
-
     background-color: #FFF;
     color:#000;
 }
@@ -98,24 +91,16 @@ datalist> option:hover{
 }
 
 @media screen and (max-width: 480px){
-    form > label{
-        width: 15em;
-    }
+    form > label, form >label~fieldset{ width: 15em; }
 }
 
 @media screen and (min-width: 480px) and (max-width: 779px){   
-    form > label{
-        width:45%;
-    }
+    form > label, form >label~fieldset{ width:65%; }
 }
 
 @media screen and (min-width: 780px) and (max-width: 864px){
-    form > label{
-        width:45%;
-    }
+    form > label, form >label~fieldset{ width:50%; }
 }
 @media screen and (min-width: 865px) and (max-width: 1920px){
-    form > label{
-        width:45%;
-    }
+    form > label, form >label~fieldset{ width:45%; }
 }
