--- a/p1/estilo/estilo.css
+++ b/p1/estilo/estilo.css
@@ -14,6 +14,8 @@ html {
     --t: #565656; /* text */
     --tt: rgba(86, 86, 86, .75); /* text transparent */
 
+    --trans: rgba(0,0,0,0); 
+
     /* en rgba per si ho necessitarem per a transparencies
         --glaucous: rgba(125, 130, 184, 1);
         --pink-crayola: rgba(239, 121, 138, 1);
@@ -86,9 +88,8 @@ footer{
     footer > p > a{ color: var(--violet); }
 
 /* MAIN - SECTION */
-body > main{ 
-    padding: 2em; /* q no estiga tot apegat */
-}
+body > main{ padding: 2em; } /* q no estiga tot apegat */
+
     body > main > h2{
         color: var(--violet);
         font-size: 2em;
@@ -121,6 +122,11 @@ body > main{
         padding: 1em;
         margin: 0;
     }
+
+.cajita{ /* autor i data noticia */
+    display: flex;
+    gap: 1.5em;
+}
     
 /* text overflow */
 .carta > a{ display: grid; } /* este fill de puta es lo que fallava, si els articles estan com a grid doncs açó igual */
@@ -131,9 +137,7 @@ body > main{
     text-overflow: ellipsis;
 }
 
-body > main > nav > p{
-    text-align: center;
-}
+body > main > nav > p{ text-align: center; }
 
 /* NO visible menú hamburguesa */
 body > nav > label{ display: none; } /* lleva el &equiv */
@@ -157,6 +161,54 @@ footer p a:hover{
     transition: 0.3s;
 }
 
+/* GALERIA DE IMATGES (en publicacion) */
+.galeria{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15em, 1fr)); /* amb açò no ens farien falta media queries, el 15em es que divideix l'ample/15 */
+    grid-gap: .5em;
+}
+.separadors{
+    border-block: 3px var(--violet) solid;
+    margin-top: 2em;
+    padding-bottom: 1em;
+}
+
+/* BOTONES */
+.boton{
+    border-radius: .5em;
+    border:0;
+    padding: 0.5em;
+    background-color: var(--glaucous);
+    color:#FFF;
+    margin:0.5em;   
+}
+.boton:hover{
+    background-color:var(--t);
+    color:#fff;
+    transition: .3s;
+}
+.ok:hover{ background-color: var(--melon); }
+.ko:hover{ background-color: var(--violet); }
+
+/* comentaris */
+#comentarios > article{
+    margin: 1.5em;
+    border-bottom: 2px solid var(--mt);
+}
+    #comentarios > article > img{
+        height: 70px;
+        width: auto;
+    }
+    .comment > h5{
+        font-size: medium;
+        color: var(--violet);
+    }
+    .comment > h5, .comment p{ margin: 0; }
+    .comment p{ padding-bottom: .75em; }
+    .comment time{
+        font-size: small;
+        color: var(--tt);
+    }
 
 /* ------------- MEDIA QUERIES ------------- */
 @media screen and (max-width: 480px){
@@ -194,6 +246,14 @@ footer p a:hover{
     #logo:hover{ filter: none; }
 
     body > main > h2 { font-size: 1.5em; }
+
+    /* salt de linea botons mg */
+    a[href="#comentarios"]::after { content: '\A'; white-space: pre;}
+    button.boton.ok{ margin: 0; }
+
+    /* Comentaria */
+    #comentarios > article{ margin: .5em; }
+    #comentarios > article > img{ height: 3.5em; }
 }
 
 @media screen and (min-width: 480px) and (max-width: 779px){
