--- a/p1/estilo/formularios.css
+++ b/p1/estilo/formularios.css
@@ -3,21 +3,12 @@ html {
     --pink-crayola: #ef798aff;
     --melon: #f7a9a8ff;
     --violet: #683257ff;
-    --t: #565656; /* text */
-
-    /* en rgba per si ho necessitarem per a transparencies */
-    /*
-        --glaucous: rgba(125, 130, 184, 1);
-        --pink-crayola: rgba(239, 121, 138, 1);
-        --melon: rgba(247, 169, 168, 1);
-        --violet: rgba(104, 50, 87, 1);
-    */
+    --t: #565656;
 }
 
 form{
     width: auto;
-    background-color: var(--pink-crayola);
-    align-items: center;
+    background-color: var(--pink-crayola); /* canviar per --mt */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,20 +42,6 @@ form > label > input{
 }
 form > label > input:focus{ border-bottom: 2px solid var(--violet); }
 
-.boton{
-    border-radius: .5em;
-    border:0;
-    padding: 0.5em;
-    background-color: var(--glaucous);
-    color:#FFF;
-    margin:0.5em;   
-}
-.boton:hover{
-    background-color:var(--t);
-    color:#fff;
-    transition: .3s;
-}
-
 .img{ display: none; }
 
 textarea{
@@ -90,16 +67,63 @@ datalist> option:hover{
     transition: .3s;
 }
 
+/* formulari deixar COMENTARI */
+#comentarios form{
+    background-color: var(--mt);
+    font-size: large;
+    display: flex;
+    padding: 2em;
+}
+#comentarios form h4{ margin: 0 0 1em 0; }
+#comentarios textarea {
+    width: 50%;
+    height: 8em;
+    font-size: medium;
+    font-family: 'Lato', sans-serif;
+    padding: 1em 1.25em;
+    border: 2px solid var(--vt);
+    border-radius: 6px;
+    background-color: #f8f8f8;
+    resize: none;
+}
+#comentarios textarea:hover{ border: 2px solid var(--pink-crayola); }
+#comentarios .botonera{
+    display: inline-flex;
+    width: 50%;
+    justify-content: space-between;
+    background-color: var(--trans);
+}
+
 @media screen and (max-width: 480px){
     form > label, form >label~fieldset{ width: 15em; }
+
+    #comentarios textarea {
+        width: 100%;
+        height: 15em;
+        padding: 1em;
+    }
+    #comentarios .botonera{ width: 100%; }
 }
 
 @media screen and (min-width: 480px) and (max-width: 779px){   
     form > label, form >label~fieldset{ width:65%; }
+
+    #comentarios textarea {
+        width: 88%;
+        height: 13.2em;
+        padding: 1em;
+    }
+    #comentarios .botonera{ width: 88%; }
 }
 
 @media screen and (min-width: 780px) and (max-width: 864px){
     form > label, form >label~fieldset{ width:50%; }
+
+    #comentarios textarea {
+        width: 75%;
+        height: 8.5em;
+    }
+    #comentarios .botonera{ width: 75%; }
 }
 @media screen and (min-width: 865px) and (max-width: 1920px){
     form > label, form >label~fieldset{ width:45%; }
