--- a/p1/estilo/estilo.css
+++ b/p1/estilo/estilo.css
@@ -220,17 +220,17 @@ footer p a:hover{
 .autora{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: .3s;
+    padding: 0;
+    width: 35%;
 }
 .autora > img{
     width: 100%;
-    height: 10em;
+    height: 16em;
     object-fit: cover;
 }
 .autora:hover { box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2); }
 
-.info_autora {
-    padding: 2px 16px;
-  }
+.info_autora { padding: 0 1em .1em 1em; }
 
 /* ------------- MEDIA QUERIES ------------- */
 @media screen and (max-width: 480px){
@@ -276,6 +276,11 @@ footer p a:hover{
     /* Comentaria */
     #comentarios > article{ margin: .5em; }
     #comentarios > article > img{ height: 3.5em; }
+
+    /* autoras */
+    .autoria{ display: block; }
+    .autora{ width: auto; }
+    .autora > img{ height: 13em; }
 }
 
 @media screen and (min-width: 480px) and (max-width: 779px){
@@ -284,6 +289,9 @@ footer p a:hover{
     header{ font-size: small; }
         header > a { margin-left: 1.5em; }
         header > div{ padding-left: 1.25em; } /* xicoteta separació */
+
+    .autora{ width: auto; }
+    .autora > img{ height: 14em; }
 }
 
 @media screen and (min-width: 780px) and (max-width: 864px){
