--- a/p2/estilo/estilo.css
+++ b/p2/estilo/estilo.css
@@ -194,7 +194,8 @@ footer p a:hover{
     padding: 0.5em;
     background-color: var(--glaucous);
     color:#FFF;
-    margin:0.5em;   
+    margin:0.5em;
+    cursor: pointer; 
 }
 .boton:hover{
     background-color:var(--t);
@@ -243,6 +244,30 @@ footer p a:hover{
 .autora:hover { box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2); }
 
 .info_autora { padding: 0 1em .1em 1em; }
+
+/* DIALOG */
+dialog {
+    width: 27em;
+    border: 1px solid var(--vt);
+    border-radius: 20px;
+    box-shadow: 0px 2px 17px var(--violet);
+    padding: 1em 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+dialog > h3{
+    color: var(--violet);
+    font-size: x-large;
+    margin-bottom: .5em;
+}
+dialog > p{
+    font-size: large;
+}
+  
+dialog::backdrop{ /* fondo del dialog fosquet */
+    background-color: rgba(125, 130, 184, .5); /* no funciona amb variables */
+}
 
 /* ------------- MEDIA QUERIES ------------- */
 @media screen and (max-width: 480px){
@@ -293,6 +318,11 @@ footer p a:hover{
     .autoria{ display: block; }
     .autora{ width: auto; }
     .autora > img{ height: 13em; }
+
+    /* dialog */
+    dialog { width: 20em; }
+    dialog > h3{ font-size: larger; }
+    dialog > p{ font-size: medium; }
 }
 
 @media screen and (min-width: 480px) and (max-width: 779px){
@@ -304,10 +334,13 @@ footer p a:hover{
 
     .autora{ width: auto; }
     .autora > img{ height: 14em; }
+
+    dialog { width: 24em; }
 }
 
 @media screen and (min-width: 780px) and (max-width: 864px){
     .image-grid { --num-cols: 3; }
+    dialog { width: 24em; }
 }
 
 @media screen and (min-width: 865px) and (max-width: 1920px){
