--- a/p2/estilo/estilo.css
+++ b/p2/estilo/estilo.css
@@ -182,7 +182,7 @@ footer p a:hover{
     grid-template-columns: repeat(auto-fit, minmax(15em, 1fr)); /* amb açò no ens farien falta media queries, el 15em es que divideix l'ample/15 */
     grid-gap: .5em;
 }
-.galeria > img{
+.galeria > div > img{
     width: 100%;
 }
 .separadors{
