--- a/p2/estilo/estilo.css
+++ b/p2/estilo/estilo.css
@@ -117,14 +117,30 @@ body > main{ padding: 2em; } /* q no estiga tot apegat */
 
 .carta{ padding: 0; } /* cartetes d'index */
 
-    .carta > a > h4 , .carta > p{
+    .carta > a > h4 , .carta > div{
         padding: 1em;
         margin: 0;
     }
+    .carta > div{
+        display: inline-flex;
+        align-items: center;
+        width: 100%;
+    }
+    .carta > div > p{
+        margin: 0;
+    }
+    .autorXicotet{
+        width: 38px;
+        margin-right: 1.5em;
+    }
 
-.cajita{ /* autor i data noticia */
+.cajita{ /* autor i data publicacion*/
     display: flex;
     gap: 1.5em;
+    align-items: center;
+}
+.cajita > img{
+    width: 2.4em;
 }
     
 /* text overflow */
@@ -164,9 +180,9 @@ footer p a:hover{
 .galeria{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(15em, 1fr)); /* amb açò no ens farien falta media queries, el 15em es que divideix l'ample/15 */
-    grid-gap: .5em;
+    grid-gap: 1.5em;
 }
-.galeria > img{
+.galeria > div > img{
     width: 100%;
 }
 .separadors{
@@ -182,7 +198,8 @@ footer p a:hover{
     padding: 0.5em;
     background-color: var(--glaucous);
     color:#FFF;
-    margin:0.5em;   
+    margin:0.5em;
+    cursor: pointer;
 }
 .boton:hover{
     background-color:var(--t);
@@ -191,6 +208,12 @@ footer p a:hover{
 }
 .ok:hover{ background-color: var(--melon); }
 .ko:hover{ background-color: var(--violet); }
+
+.mg:disabled {
+    color: var(--t);
+    background-color: var(--vt);
+}
+  
 
 /* comentaris */
 #comentarios > article{
@@ -231,6 +254,30 @@ footer p a:hover{
 .autora:hover { box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2); }
 
 .info_autora { padding: 0 1em .1em 1em; }
+
+/* DIALOG */
+dialog {
+    width: 27em;
+    border: 1px solid var(--vt);
+    border-radius: 20px;
+    box-shadow: 0px 2px 17px var(--violet);
+    padding: 1em 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+dialog > h3{
+    color: var(--violet);
+    font-size: x-large;
+    margin-bottom: .5em;
+}
+dialog > p{
+    font-size: large;
+}
+  
+dialog::backdrop{ /* fondo del dialog fosquet */
+    background-color: rgba(125, 130, 184, .5); /* no funciona amb variables */
+}
 
 /* ------------- MEDIA QUERIES ------------- */
 @media screen and (max-width: 480px){
@@ -281,6 +328,11 @@ footer p a:hover{
     .autoria{ display: block; }
     .autora{ width: auto; }
     .autora > img{ height: 13em; }
+
+    /* dialog */
+    dialog { width: 20em; }
+    dialog > h3{ font-size: larger; }
+    dialog > p{ font-size: medium; }
 }
 
 @media screen and (min-width: 480px) and (max-width: 779px){
@@ -292,10 +344,13 @@ footer p a:hover{
 
     .autora{ width: auto; }
     .autora > img{ height: 14em; }
+
+    dialog { width: 24em; }
 }
 
 @media screen and (min-width: 780px) and (max-width: 864px){
     .image-grid { --num-cols: 3; }
+    dialog { width: 24em; }
 }
 
 @media screen and (min-width: 865px) and (max-width: 1920px){
