--- a/p3/estilo/style.css
+++ b/p3/estilo/style.css
@@ -187,7 +187,7 @@ dialog::backdrop{ /* fondo del dialog fosquet */
 }
 
 
-/*TABLA PUNTUACIONES*/ /*pruebas porque esto no funciona y no entiendo nadaaaaaaaaa */
+/*TABLA PUNTUACIONES*/ 
 table {
     border-collapse: collapse; 
     width: 100%; 
@@ -202,10 +202,34 @@ table {
   
   /* Estilos para el encabezado de la tabla */
   table th {
-    background-color: #f2f2f2; 
+    background-color:var(--pink-crayola); 
   }
 
+  .tuturno{
+    background-color:var(--violet);
+    color:#FFF;
+}
 
+/* ESTILOS PARA NUMEROS JUGABLES*/
+.cuadrado{
+    width: 100%;
+    height: 100%;
+    padding: 1em;
+    margin-top: 1.5em;
+    background-color: #7d82b8ff;
+    border-radius: 5px;
+    display: inline;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  .sombreado {
+    width: 100px;
+    height: 100px;
+    background-color: #7d82b8ff;
+    box-shadow: 2px 2px 5px rgba(125, 130, 184, 1);
+    cursor: pointer;
+  }
 /* ------------- MEDIA QUERIES ------------- */
 @media screen and (max-width: 480px){
     /* MENU HAMBUERGUESA */
