--- a/p3/estilo/style.css
+++ b/p3/estilo/style.css
@@ -214,13 +214,14 @@ table {
 .cuadrado{
     width: 100%;
     height: 100%;
-    padding: 1em;
+    padding: 1.5em;
     margin-top: 1.5em;
     background-color: #7d82b8ff;
     border-radius: 5px;
     display: inline;
     justify-content: center;
     align-items: center;
+    margin:1em;
     
   }
   .sombreado {
@@ -228,7 +229,14 @@ table {
     height: 100px;
     background-color: #7d82b8ff;
     box-shadow: 2px 2px 5px rgba(125, 130, 184, 1);
+    border-radius: 5px;
     cursor: pointer;
+  }
+  .nojugable{
+    cursor:not-allowed;
+    border-radius: 0px;
+  
+    
   }
 /* ------------- MEDIA QUERIES ------------- */
 @media screen and (max-width: 480px){
