estil llevat flex feo + arreglar barra nav juego

--- a/p3/estilo/navbar.css
+++ b/p3/estilo/navbar.css
@@ -4,14 +4,6 @@ html {
     --melon: #f7a9a8ff;
     --violet: #683257ff;
     --t: #565656; /* text */
-
-    /* en rgba per si ho necessitarem per a transparencies */
-    /*
-        --glaucous: rgba(125, 130, 184, 1);
-        --pink-crayola: rgba(239, 121, 138, 1);
-        --melon: rgba(247, 169, 168, 1);
-        --violet: rgba(104, 50, 87, 1);
-    */
 }
 
 /* ------------------- NAVIGATION BAR ------------------- */
@@ -21,17 +13,17 @@ body > nav {
     z-index: 1; /* fa que el hover que canvia el tam de les imatges no es superpose */
     top: 0px;
 }
+
+/* NO visible menú hamburguesa */
+body > nav > label{ display: none; } /* lleva el &equiv */
+#chkMenu{ display: none; } /* lleva check*/
+
 body > nav > ul{
     padding: 0; /* lleva sangria */
     display: flex;
     justify-content: space-evenly;
     margin: 0; /* ajusta que estiga apegat */
-}
-
-.act{
-    background-color: var(--melon);
-    color: var(--melon);
-}
+}    
 
 .menu > li{
     flex: 1; /* que ocupe tot el bloc */
@@ -46,48 +38,39 @@ body > nav > ul{
 .menu > li > a > i{ padding-right: .5em; }
 
 /* ENLLAÇOS */
-.act a:hover {
-    color: var(--violet);
-    transition: 0.4s;
-}
-nav li:not(.act):hover {
+nav li:hover {
     background-color: var(--tt);
     transition: 0.4s ease;
 }
 
 /* ------------- MEDIA QUERIES ------------- */
 @media screen and (max-width: 480px){
+    /* MENU HAMBUERGUESA */
+    body > nav > ul{
+        display: none;
+    }
+    body > nav > label{
+        cursor: pointer;
+        display: block;
+    }
+    body > nav > label:hover{ /*no te molt sentit xq en mobil no se hoverea*/
+        color: #fff;
+        transition: 0.4s ease;
+    }
+    #chkMenu:checked+ul{
+        display: block;
+    }
+        #chkMenu:checked+ul li{
+            padding: .5em;
+        } 
+
     nav > label[for="chkMenu"]{ /* &equiv; */
         font-size: 1.5em;
         font-weight: bold;
         color: var(--melon);
         padding: 0 .5em;
     }
-    /* .menu{
-        position: absolute;
-        width: 100%;
-        overflow: hidden;
-        flex-direction: column;
-        align-items: center;
-        background-color: var(--violet);
-        height: 0px;
-        transition: height .4s ease;
-    } */
-    /* .menu{
-        position: absolute;
-        width: 100%;
-        background-color: var(--violet);
-        transition: .4s ease;
-    }
-    #chkMenu:checked+.menu{
-        height: auto;
-    } */
 
-
-    
-    #chkMenu:checked+ul li{
-        padding: .5em;
-    }
     .menu > li > a{ font-size: small; }
 }
 
@@ -102,8 +85,4 @@ nav li:not(.act):hover {
 
 @media screen and (min-width: 780px) and (max-width: 864px){
     .menu > li > a > i{ display: none; }
-}
-
-@media screen and (min-width: 865px) and (max-width: 1920px){
-    
 }
